--- a/HospitalManagement2/web/pom.xml
+++ b/HospitalManagement2/web/pom.xml
@@ -7,4 +7,12 @@
   </parent>
   <artifactId>web</artifactId>
   <name>web</name>
+  <dependencies>
+  <dependency>
+  <groupId>com.HM</groupId>
+    <artifactId>service</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <type>jar</type>
+  </dependency>
+  </dependencies>
 </project>
